# GFS-MLModel

./: Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml  settings.py
scripts/bash/: init.sh
src/: main.py
src/huggingface/: __init__.py  huggingface.py  huggingfaceHub.py
src/model/: __init__.py  model.py  structure.py
src/model/data/: data.py
src/model/train/: train.py
src/model2/: __init__.py  model2.py
src/server/: __init__.py  main.py  server.py
src/server/admin/: admin.py  main.py
src/server/admin/templates/: admin_base.html  admin_dashboard.html  dashboard.html
src/server/api/: api.py
src/server/public/: main.py  public.py
src/server/public/templates/: public_base.html  public_dashboard.html
